add function create form to task, css style to form container

--- a/style/style.scss
+++ b/style/style.scss
@@ -27,6 +27,7 @@ html {
 
 body {
     height: 100vh;
+    min-height: 100vh;
     width: 100vw;
     position: relative;
     font-size: 1.6rem;
@@ -50,65 +51,152 @@ body {
         }
     }
 
-    aside {
+    #container {
         height: 100%;
-        width: 30rem;
-        background-color: $aside-background-color;
+        width: 100%;
         display: flex;
-        justify-content: flex-start;
-        flex-direction: column;
-        gap: 3rem;
 
-        h2, h3, button {
-            font-family: 'Rubik', sans-serif;
-            font-size: 2.2rem;
-        }
-
-        #section-one-sidebar {
+        aside {
+            height: 100%;
+            width: 30rem;
+            background-color: $aside-background-color;
             display: flex;
-            justify-content: center;
-            align-items: flex-start;
+            justify-content: flex-start;
             flex-direction: column;
-            gap: 5rem;
-            padding: 3rem;
+            gap: 3rem;
 
-            div {
-                button {
-                    cursor: pointer;
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    gap: 1.5rem;
+            h2,
+            h3,
+            button {
+                font-family: 'Rubik', sans-serif;
+                font-size: 2.2rem;
+            }
+
+            #section-one-sidebar {
+                display: flex;
+                justify-content: center;
+                align-items: flex-start;
+                flex-direction: column;
+                gap: 5rem;
+                padding: 3rem;
+
+                div {
+                    button {
+                        cursor: pointer;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        gap: 1.5rem;
+                    }
+
+                    img {
+                        height: 3rem;
+                        width: 3rem;
+                    }
                 }
+            }
 
-                img {
-                    height: 3rem;
-                    width: 3rem;
+            #section-two-sidebar {
+                display: flex;
+                justify-content: center;
+                align-items: flex-start;
+                flex-direction: column;
+                gap: 2.5rem;
+                padding: 3rem;
+
+                div {
+                    button {
+                        cursor: pointer;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        gap: 1.5rem;
+                    }
+
+                    img {
+                        height: 3rem;
+                        width: 3rem;
+                    }
                 }
             }
         }
 
-        #section-two-sidebar {
+        main {
+            height: 100%;
+            width: 100%;
             display: flex;
             justify-content: center;
-            align-items: flex-start;
+            align-items: center;
             flex-direction: column;
-            gap: 2.5rem;
-            padding: 3rem;
+            gap: 5rem;
 
-            div {
-                button {
-                    cursor: pointer;
+            form {
+                background-color: $aside-background-color;
+                height: 8rem;
+                width: 80rem;
+                border-radius: 2rem;
+                display: flex;
+                justify-content: flex-start;
+                align-items: center;
+                gap: 3rem;
+                padding-left: 3rem;
+
+                input[type="text"] {
+                    background-color: whitesmoke;
+                    color: #222;
+                    border-radius: 1rem;
+                    width: 30rem;
+                    height: 5rem;
+                    padding: 1rem;
+                }
+
+                input[type="date"] {
+                    background-color: whitesmoke;
+                    color: #222;
+                    border-radius: 1rem;
+                    width: 15rem;
+                    height: 5rem;
+                    padding-left: 1rem;
+                    padding-right: 1rem;
+                }
+
+                #button-cancel-form {
+                    background-color: red;
+                    height: 5rem;
+                    width: 10rem;
+                    border-radius: 2rem;
+                    color: whitesmoke;
                     display: flex;
                     justify-content: center;
                     align-items: center;
-                    gap: 1.5rem;
                 }
 
-                img {
-                    height: 3rem;
-                    width: 3rem;
+                #button-send-form {
+                    cursor: pointer;
+                    background-color: green;
+                    height: 5rem;
+                    width: 10rem;
+                    font-family: 'Rubik', sans-serif;
+                    font-size: 2.2rem;
+                    border-radius: 2rem;
+                    color: whitesmoke;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
                 }
+            }
+
+            button {
+                cursor: pointer;
+                font-family: 'Rubik', sans-serif;
+                font-size: 2.2rem;
+                display: flex;
+                gap: 1.5rem;
+            }
+
+            img {
+                height: 3rem;
+                width: 3rem;
             }
         }
     }
@@ -126,7 +214,7 @@ body {
         gap: 1rem;
 
         a {
-            fill: whitesmoke    ;
+            fill: whitesmoke;
             height: 5rem;
             width: 5rem;
             transition: 0.8s;
