--- a/style/style.css
+++ b/style/style.css
@@ -19,6 +19,7 @@ html {
 
 body {
   height: 100vh;
+  min-height: 100vh;
   width: 100vw;
   position: relative;
   font-size: 1.6rem;
@@ -40,7 +41,12 @@ body header button {
   font-family: "Yusei Magic", sans-serif;
   cursor: pointer;
 }
-body aside {
+body #container {
+  height: 100%;
+  width: 100%;
+  display: flex;
+}
+body #container aside {
   height: 100%;
   width: 30rem;
   background-color: #ddd;
@@ -49,11 +55,13 @@ body aside {
   flex-direction: column;
   gap: 3rem;
 }
-body aside h2, body aside h3, body aside button {
+body #container aside h2,
+body #container aside h3,
+body #container aside button {
   font-family: "Rubik", sans-serif;
   font-size: 2.2rem;
 }
-body aside #section-one-sidebar {
+body #container aside #section-one-sidebar {
   display: flex;
   justify-content: center;
   align-items: flex-start;
@@ -61,18 +69,18 @@ body aside #section-one-sidebar {
   gap: 5rem;
   padding: 3rem;
 }
-body aside #section-one-sidebar div button {
+body #container aside #section-one-sidebar div button {
   cursor: pointer;
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 1.5rem;
 }
-body aside #section-one-sidebar div img {
+body #container aside #section-one-sidebar div img {
   height: 3rem;
   width: 3rem;
 }
-body aside #section-two-sidebar {
+body #container aside #section-two-sidebar {
   display: flex;
   justify-content: center;
   align-items: flex-start;
@@ -80,14 +88,85 @@ body aside #section-two-sidebar {
   gap: 2.5rem;
   padding: 3rem;
 }
-body aside #section-two-sidebar div button {
+body #container aside #section-two-sidebar div button {
   cursor: pointer;
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 1.5rem;
 }
-body aside #section-two-sidebar div img {
+body #container aside #section-two-sidebar div img {
+  height: 3rem;
+  width: 3rem;
+}
+body #container main {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 5rem;
+}
+body #container main form {
+  background-color: #ddd;
+  height: 8rem;
+  width: 80rem;
+  border-radius: 2rem;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 3rem;
+  padding-left: 3rem;
+}
+body #container main form input[type=text] {
+  background-color: whitesmoke;
+  color: #222;
+  border-radius: 1rem;
+  width: 30rem;
+  height: 5rem;
+  padding: 1rem;
+}
+body #container main form input[type=date] {
+  background-color: whitesmoke;
+  color: #222;
+  border-radius: 1rem;
+  width: 15rem;
+  height: 5rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+body #container main form #button-cancel-form {
+  background-color: red;
+  height: 5rem;
+  width: 10rem;
+  border-radius: 2rem;
+  color: whitesmoke;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+body #container main form #button-send-form {
+  cursor: pointer;
+  background-color: green;
+  height: 5rem;
+  width: 10rem;
+  font-family: "Rubik", sans-serif;
+  font-size: 2.2rem;
+  border-radius: 2rem;
+  color: whitesmoke;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+body #container main button {
+  cursor: pointer;
+  font-family: "Rubik", sans-serif;
+  font-size: 2.2rem;
+  display: flex;
+  gap: 1.5rem;
+}
+body #container main img {
   height: 3rem;
   width: 3rem;
 }
