--- a/style/style.css
+++ b/style/style.css
@@ -159,6 +159,47 @@ body #container main form #button-send-form {
   justify-content: center;
   align-items: center;
 }
+body #container main .add-task-div {
+  background-color: #ddd;
+  height: 8rem;
+  width: 80rem;
+  border-radius: 2rem;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  gap: 3rem;
+  padding: 1rem;
+}
+body #container main .add-task-div p {
+  background-color: whitesmoke;
+  color: #222;
+  border-radius: 1rem;
+  width: 40rem;
+  height: 5rem;
+  padding: 1rem;
+}
+body #container main .add-task-div input[type=date] {
+  background-color: whitesmoke;
+  color: #222;
+  border-radius: 1rem;
+  width: 15rem;
+  height: 5rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+body #container main .add-task-div button {
+  cursor: pointer;
+  background-color: green;
+  height: 5rem;
+  width: 11rem;
+  font-family: "Rubik", sans-serif;
+  font-size: 2.2rem;
+  border-radius: 2rem;
+  color: whitesmoke;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 body #container main button {
   cursor: pointer;
   font-family: "Rubik", sans-serif;
