--- a/style/style.scss
+++ b/style/style.scss
@@ -186,6 +186,51 @@ body {
                 }
             }
 
+            .add-task-div {
+                background-color: $aside-background-color;
+                height: 8rem;
+                width: 80rem;
+                border-radius: 2rem;
+                display: flex;
+                justify-content: space-around;
+                align-items: center;
+                gap: 3rem;
+                padding: 1rem;
+
+                p {
+                    background-color: whitesmoke;
+                    color: #222;
+                    border-radius: 1rem;
+                    width: 40rem;
+                    height: 5rem;
+                    padding: 1rem;
+                }
+
+                input[type="date"] {
+                    background-color: whitesmoke;
+                    color: #222;
+                    border-radius: 1rem;
+                    width: 15rem;
+                    height: 5rem;
+                    padding-left: 1rem;
+                    padding-right: 1rem;
+                }
+
+                button {
+                    cursor: pointer;
+                    background-color: green;
+                    height: 5rem;
+                    width: 11rem;
+                    font-family: 'Rubik', sans-serif;
+                    font-size: 2.2rem;
+                    border-radius: 2rem;
+                    color: whitesmoke;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                }
+            }
+
             button {
                 cursor: pointer;
                 font-family: 'Rubik', sans-serif;
